--- a/notebooks/riotapi_connect_and_define.ipynb
+++ b/notebooks/riotapi_connect_and_define.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "42bc5f8b",
+   "id": "1776aeb5",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fec1623c",
+   "id": "92278ad3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,26 +25,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef953da7",
+   "id": "051ebad9",
    "metadata": {},
    "source": [
-    "For this next cell, I'm going to hide my API key and upload a picture of what it should look like. DO THIS HIDE YOUR API KEY BEFORE YOU UPLOAD THIS!"
+    "For this next cell, I'm going to hide my API key, even though it is reset every 24 hours."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1c4396d8",
+   "id": "2e3e49ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "server = \"na1\"\n",
-    "api_key = \"RGAPI-6b6ccf18-65e3-43d4-babf-c612c9e18fc3\""
+    "api_key = \"RGAPI-XXXXX\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7a4b006a",
+   "id": "dc7d6452",
    "metadata": {},
    "source": [
     "These are some functions provided in [Pantheon](https://github.com/Canisback/pantheon) that I will use to get any account's summoner ID and recent match history."
@@ -52,20 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "9465f89c",
+   "execution_count": 32,
+   "id": "8494f26b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://na1.api.riotgames.com/lol/summoner/v4/summoners/by-name/MAMMOTHMAN65\n",
-      "200\n",
-      "<CIMultiDictProxy('Date': 'Wed, 08 Sep 2021 01:48:38 GMT', 'Content-Type': 'application/json;charset=utf-8', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'Vary': 'Accept-Encoding', 'X-App-Rate-Limit': '20:1,100:120', 'X-App-Rate-Limit-Count': '1:1,3:120', 'X-Method-Rate-Limit': '2000:60', 'X-Method-Rate-Limit-Count': '1:60', 'X-Riot-Edge-Trace-Id': '18f61dbf-e56c-494a-8418-14999e430305', 'Content-Encoding': 'gzip', 'Access-Control-Allow-Origin': '*', 'Access-Control-Allow-Methods': 'GET, PUT, DELETE, POST, OPTIONS', 'Access-Control-Allow-Headers': 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range', 'Access-Control-Expose-Headers': 'Content-Length,Content-Range')>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def requestsLog(url, status, headers):\n",
     "    print(url)\n",
@@ -101,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8ed97f3",
+   "id": "e5cfa273",
    "metadata": {},
    "source": [
     "You can choose whatever summoner name you want to search for, I just used my own. "
@@ -109,8 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "0b349e47",
+   "execution_count": 31,
+   "id": "542c253f",
    "metadata": {
     "tags": [
      "hide-output"
@@ -123,23 +113,22 @@
      "text": [
       "https://na1.api.riotgames.com/lol/summoner/v4/summoners/by-name/Jooku\n",
       "200\n",
-      "<CIMultiDictProxy('Date': 'Wed, 08 Sep 2021 01:51:59 GMT', 'Content-Type': 'application/json;charset=utf-8', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'Vary': 'Accept-Encoding', 'X-App-Rate-Limit': '20:1,100:120', 'X-App-Rate-Limit-Count': '1:1,3:120', 'X-Method-Rate-Limit': '2000:60', 'X-Method-Rate-Limit-Count': '3:60', 'X-Riot-Edge-Trace-Id': '50922550-d59e-4cde-bd57-eac6fae3a312', 'Content-Encoding': 'gzip', 'Access-Control-Allow-Origin': '*', 'Access-Control-Allow-Methods': 'GET, PUT, DELETE, POST, OPTIONS', 'Access-Control-Allow-Headers': 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range', 'Access-Control-Expose-Headers': 'Content-Length,Content-Range')>\n"
+      "<CIMultiDictProxy('Date': 'Wed, 08 Sep 2021 01:54:56 GMT', 'Content-Type': 'application/json;charset=utf-8', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'Vary': 'Accept-Encoding', 'X-App-Rate-Limit': '20:1,100:120', 'X-App-Rate-Limit-Count': '1:1,4:120', 'X-Method-Rate-Limit': '2000:60', 'X-Method-Rate-Limit-Count': '4:60', 'X-Riot-Edge-Trace-Id': '799fb89c-6979-43c1-96e8-93374708e78e', 'Content-Encoding': 'gzip', 'Access-Control-Allow-Origin': '*', 'Access-Control-Allow-Methods': 'GET, PUT, DELETE, POST, OPTIONS', 'Access-Control-Allow-Headers': 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range', 'Access-Control-Expose-Headers': 'Content-Length,Content-Range')>\n"
      ]
     }
    ],
    "source": [
     "name = \"Jooku\"\n",
     "\n",
-    "loop = asyncio.get_event_loop()  \n",
-    "\n",
     "#call function to set the summonerId and accountId for the name that I chose\n",
-    "(summonerId, accountId) = loop.run_until_complete(getSummonerId(name))"
+    "loop = asyncio.get_event_loop()  \n",
+    "(summonerId, accountId) = loop.run_until_complete(getSummonerId(name))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c382828f",
+   "id": "6a3f1b98",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -147,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3af57076",
+   "id": "3aa9eb3a",
    "metadata": {},
    "outputs": [],
    "source": []
